# rl_arena_collision_dumper

./: .gitignore  Cargo.toml  README.md  collision.cfg  prebuild.sh
.github/workflows/: main.yml
examples/: cmf_to_obj.rs
src/: converter.rs  main.rs  maps.rs
