[package]
name = "rl_arena_collision_dumper"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
strip = true
panic = "abort"
